# production-ai-agents

./: .gitignore  README.md
project-01-graphrag-research-engine/: .env.example  README.md  docker-compose.yml  pyproject.toml
project-01-graphrag-research-engine/src/: __init__.py  agent.py  api.py  config.py  evaluation.py  graph_builder.py  retrieval.py
project-02-a2a-code-review-network/: .env.example  README.md  pyproject.toml
project-02-a2a-code-review-network/src/: __init__.py  api.py  orchestrator.py
project-02-a2a-code-review-network/src/agents/: security_agent.py  style_agent.py  test_agent.py
project-03-sre-incident-response/: .env.example  README.md  pyproject.toml
project-03-sre-incident-response/src/: agent.py  api.py  config.py  runbook_store.py
project-03-sre-incident-response/src/mcp_servers/: kubectl_mcp.py
project-04-mcp-enterprise-gateway/: .env.example  README.md  pyproject.toml
project-04-mcp-enterprise-gateway/src/: gateway.py
project-04-mcp-enterprise-gateway/src/middleware/: cache.py  tracer.py
project-04-mcp-enterprise-gateway/src/servers/: sql_server.py
project-05-financial-intelligence/: .env.example  README.md  pyproject.toml
project-05-financial-intelligence/src/: api.py  observability.py  regime_detector.py  team.py
project-06-data-pipeline-sentinel/: .env.example  README.md  pyproject.toml
project-06-data-pipeline-sentinel/src/: agent.py  expectations.py  memory.py
project-06-data-pipeline-sentinel/src/analysis/: schema_diff.py  statistical.py
project-07-cross-cloud-compliance/: .env.example  README.md  pyproject.toml
project-07-cross-cloud-compliance/gdpr_agent/: main.py
project-07-cross-cloud-compliance/orchestrator/: main.py
project-08-pr-lifecycle-agent/: .env.example  README.md  pyproject.toml
project-08-pr-lifecycle-agent/src/: adr_store.py  agent.py  evaluation.py
project-09-adaptive-learning-agent/: .env.example  README.md  pyproject.toml
project-09-adaptive-learning-agent/src/: supervisor.py
project-09-adaptive-learning-agent/src/memory/: spaced_repetition.py
project-10-competitive-intelligence/: .env.example  README.md  pyproject.toml
project-10-competitive-intelligence/src/: api.py  dashboard.py  swarm.py
project-10-competitive-intelligence/src/mcp_browser/: browser_mcp.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css  main.jsx
web/src/components/: CodeBlock.jsx  Hero.jsx  MermaidDiagram.jsx  Navbar.jsx  ProjectCard.jsx  ProjectRow.jsx  TutorialStep.jsx
web/src/data/: projects.js
web/src/pages/: Home.jsx  ProjectDetail.jsx
