[project]
name = "graphrag-research-engine"
version = "0.1.0"
description = "Adaptive GraphRAG research assistant with DRIFT search, CRAG, and RAGAS evaluation"
requires-python = ">=3.11"
dependencies = [
    # LLM + Agent framework
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.2.0",
    # Graph database
    "neo4j>=5.20.0",
    "langchain-neo4j>=0.4.0",
    # Vector store
    "chromadb>=0.6.0",
    "langchain-chroma>=0.2.0",
    # Sparse retrieval
    "rank-bm25>=0.2.2",
    # Embeddings + evaluation
    "ragas>=0.2.0",
    "openai>=1.50.0",
    # Document loading
    "pypdf>=4.0.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    # Caching
    "redis[hiredis]>=5.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    # Config
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ingest = "src.graph_builder:cli_ingest"
evaluate = "src.evaluation:cli_evaluate"
serve = "src.api:cli_serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
