[project]
name = "competitive-intelligence"
version = "0.1.0"
description = "LangGraph Swarm competitive intelligence with FastMCP browser tools and Streamlit"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-swarm>=0.0.4",
    "langchain-mcp-adapters>=0.2.0",
    "langsmith>=0.2.0",
    "fastmcp>=3.0.0",
    "mcp>=1.5.0",
    "playwright>=1.45.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "APScheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.39.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
